# mappers

./: .coveragerc  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  azure-pipelines.yml  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini  release.config.js  setup.cfg  tox.ini
docs/: changelog.md  development.md  index.markdown  index.md
src/: mappers.py
src/_mappers/: compat.py  compat.pyi  exceptions.py  exceptions.pyi  factory.py  factory.pyi  mapper.py  mapper.pyi  validation.py  validation.pyi
src/_mappers/entities/: __init__.py  __init__.pyi  attrs.py  attrs.pyi  dataclasses.py  dataclasses.pyi  pydantic.py  pydantic.pyi
src/_mappers/sources/: __init__.py  __init__.pyi  django.py  django.pyi
src/mappers/: __init__.py  _mapper.py  _types.py  exceptions.py
src/mappers/_entities/: __init__.py  attrs.py  dataclasses.py  pydantic.py
tests/: conftest.py  test_configuration.py  test_data_sources.py  test_django_data_source.py  test_reader.py  test_validation.py
tests/helpers/: helpers.py  mddoctest.py  mddoctest.yaml  models.py  pyproject.toml
tests/helpers/django_project/: apps.py  models.py  settings.py
tests/helpers/django_project/fixtures/: examples.yaml
tests/helpers/django_project/migrations/: 0001_initial.py
tests/helpers/examples/: __init__.py  attrs.py  attrs_annotated.py  dataclasses.py  pydantic_dataclasses.py  pydantic_model.py
tests/helpers/readers/: __init__.py  annotations.py  arguments.py
typesafety/: test_public_package.yml
