[tool.poetry]
name = "mappers"
version = "0.1.dev"

description = "Declarative mappers from ORM models to domain entities. And back again!"
readme = "README.md"
license = "BSD-2-Clause"

homepage = "https://dry-python.org/"
repository = "https://github.com/dry-python/mappers/"
documentation = "https://mappers.readthedocs.io/"

authors = [
    "Artem Malyshev <proofit404@gmail.com>",
    "Nikita Sobolev <mail@sobolevn.me>",
]

keywords = [
  "dry-python",
  "mappers",
  "ddd",
  "domain driven design",
  "type-safety",
  "django models",
  "attrs",
  "ORM",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
mkdocs = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }

[tool.poetry.extras]
mkdocs = ["mkdocs", "mkdocs-material"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
