[tool.poetry]
name = "helpers"
version = "0"
description = ""
authors = []
packages = [
    { include = "django_project" },
    { include = "examples" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
    { include = "models.py" },
    { include = "readers" },
]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
